--- a/lab1.ipynb
+++ b/lab1.ipynb
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "id": "46c4061d",
    "metadata": {
     "ExecuteTime": {
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "id": "8dd52778",
    "metadata": {
     "ExecuteTime": {
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "id": "279d2992",
    "metadata": {
     "ExecuteTime": {
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "id": "6d10ff92",
    "metadata": {
     "ExecuteTime": {
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "id": "c4efba3d",
    "metadata": {
     "ExecuteTime": {
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "id": "b714ddb7",
    "metadata": {
     "ExecuteTime": {
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "id": "92216b13",
    "metadata": {
     "ExecuteTime": {
@@ -359,7 +359,7 @@
    "outputs": [],
    "source": [
     "# Por favor cambien esta ruta a la que corresponda en sus maquinas\n",
-    "data_dir = 'data/lab1_dogs_cats'\n",
+    "data_dir = 'data/lab1'\n",
     "\n",
     "train_images = []\n",
     "train_labels = []\n",
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "id": "80692abf",
    "metadata": {
     "ExecuteTime": {
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "id": "4c870ae4",
    "metadata": {
     "ExecuteTime": {
@@ -506,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "id": "64e024e8",
    "metadata": {
     "ExecuteTime": {
@@ -533,7 +533,7 @@
      "traceback": [
       "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
       "\u001b[31mNotImplementedError\u001b[39m                       Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[22]\u001b[39m\u001b[32m, line 6\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m#(Aproximadamente, 3 líneas de código)\u001b[39;00m\n\u001b[32m      2\u001b[39m \u001b[38;5;66;03m# m_train = \u001b[39;00m\n\u001b[32m      3\u001b[39m \u001b[38;5;66;03m# m_test = \u001b[39;00m\n\u001b[32m      4\u001b[39m \u001b[38;5;66;03m# num_px = \u001b[39;00m\n\u001b[32m      5\u001b[39m \u001b[38;5;66;03m# YOUR CODE HERE\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m6\u001b[39m \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mNotImplementedError\u001b[39;00m()\n\u001b[32m      8\u001b[39m \u001b[38;5;28mprint\u001b[39m (\u001b[33m\"\u001b[39m\u001b[33mNúmero de datos en entrenamiento: m_train = \u001b[39m\u001b[33m\"\u001b[39m + \u001b[38;5;28mstr\u001b[39m(m_train))\n\u001b[32m      9\u001b[39m \u001b[38;5;28mprint\u001b[39m (\u001b[33m\"\u001b[39m\u001b[33mNúmero de datos en testing: m_test = \u001b[39m\u001b[33m\"\u001b[39m + \u001b[38;5;28mstr\u001b[39m(m_test))\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[10]\u001b[39m\u001b[32m, line 6\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m#(Aproximadamente, 3 líneas de código)\u001b[39;00m\n\u001b[32m      2\u001b[39m \u001b[38;5;66;03m# m_train = \u001b[39;00m\n\u001b[32m      3\u001b[39m \u001b[38;5;66;03m# m_test = \u001b[39;00m\n\u001b[32m      4\u001b[39m \u001b[38;5;66;03m# num_px = \u001b[39;00m\n\u001b[32m      5\u001b[39m \u001b[38;5;66;03m# YOUR CODE HERE\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m6\u001b[39m \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mNotImplementedError\u001b[39;00m()\n\u001b[32m      8\u001b[39m \u001b[38;5;28mprint\u001b[39m (\u001b[33m\"\u001b[39m\u001b[33mNúmero de datos en entrenamiento: m_train = \u001b[39m\u001b[33m\"\u001b[39m + \u001b[38;5;28mstr\u001b[39m(m_train))\n\u001b[32m      9\u001b[39m \u001b[38;5;28mprint\u001b[39m (\u001b[33m\"\u001b[39m\u001b[33mNúmero de datos en testing: m_test = \u001b[39m\u001b[33m\"\u001b[39m + \u001b[38;5;28mstr\u001b[39m(m_test))\n",
       "\u001b[31mNotImplementedError\u001b[39m: "
      ]
     }
