--- a/lab1.ipynb
+++ b/lab1.ipynb
@@ -34666,7 +34666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "64e024e8",
    "metadata": {
     "ExecuteTime": {
@@ -34687,14 +34687,17 @@
    },
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "len() takes exactly one argument (0 given)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[20]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m#(Aproximadamente, 3 líneas de código)\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m m_train = \u001b[38;5;28;43mlen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m      3\u001b[39m \u001b[38;5;66;03m# m_test = \u001b[39;00m\n\u001b[32m      4\u001b[39m \u001b[38;5;66;03m# num_px = \u001b[39;00m\n\u001b[32m      5\u001b[39m \u001b[38;5;66;03m# YOUR CODE HERE\u001b[39;00m\n\u001b[32m      7\u001b[39m \u001b[38;5;28mprint\u001b[39m (\u001b[33m\"\u001b[39m\u001b[33mNúmero de datos en entrenamiento: m_train = \u001b[39m\u001b[33m\"\u001b[39m + \u001b[38;5;28mstr\u001b[39m(m_train))\n",
-      "\u001b[31mTypeError\u001b[39m: len() takes exactly one argument (0 given)"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Número de datos en entrenamiento: m_train = 557\n",
+      "Número de datos en testing: m_test = 140\n",
+      "Alto y ancho de cada imagen: num_px = 64\n",
+      "Cada imagen tiene un tamañado de: (64, 64, 3)\n",
+      "train_images shape: (557, 64, 64, 3)\n",
+      "train_labels shape: (1, 557)\n",
+      "test_images shape: (140, 64, 64, 3)\n",
+      "test_labels shape: (1, 140)\n"
      ]
     }
    ],
@@ -34717,7 +34720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "28b3a356",
    "metadata": {
     "ExecuteTime": {
@@ -34738,7 +34741,56 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <div class=\"alert alert-box alert-success\">\n",
+       "        <h1> <!--{id:\"CORRECTMARK\", marks:\"2\"}--> \n",
+       "         ✓ [2 marks] \n",
+       "         </h1> </div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <div class=\"alert alert-box alert-success\">\n",
+       "        <h1> <!--{id:\"CORRECTMARK\", marks:\"2\"}--> \n",
+       "         ✓ [2 marks] \n",
+       "         </h1> </div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <div class=\"alert alert-box alert-success\">\n",
+       "        <h1> <!--{id:\"CORRECTMARK\", marks:\"1\"}--> \n",
+       "         ✓ [1 marks] \n",
+       "         </h1> </div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "with tick.marks(2):\n",
     "    assert m_train == 557\n",
@@ -34782,7 +34834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "bf9a4db5",
    "metadata": {
     "ExecuteTime": {
@@ -34801,13 +34853,24 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "train_images_flatten shape: (12288, 557)\n",
+      "train_labels shape: (1, 557)\n",
+      "test_images_flatten shape: (12288, 140)\n",
+      "test_labels shape: (1, 140)\n"
+     ]
+    }
+   ],
    "source": [
     "#(Aproximadamente, 2 líneas de código)\n",
-    "# train_images_flatten = \n",
-    "# test_images_flatten = \n",
+    "train_images_flatten = train_images.reshape(m_train, -1).T\n",
+    "test_images_flatten = test_images.reshape(m_test, -1).T\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()\n",
+    "# raise NotImplementedError()\n",
     "\n",
     "print (\"train_images_flatten shape: \" + str(train_images_flatten.shape))\n",
     "print (\"train_labels shape: \" + str(train_labels.shape))\n",
@@ -34874,7 +34937,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "dada7a0f",
    "metadata": {
     "ExecuteTime": {
@@ -34968,7 +35031,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "98d9422e",
    "metadata": {
     "ExecuteTime": {
@@ -35052,10 +35115,9 @@
     "    \"\"\"\n",
     "\n",
     "    # Aprox 2 línas de código\n",
-    "    # w = \n",
-    "    # b = \n",
+    "    w = np.zeros((dim, 1))\n",
+    "    b = 0.0\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
     "\n",
     "    return w, b"
    ]
