--- a/lab1.ipynb
+++ b/lab1.ipynb
@@ -35080,7 +35080,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "7a79ea6d",
    "metadata": {
     "ExecuteTime": {
@@ -35124,7 +35124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "72e45d5a",
    "metadata": {
     "ExecuteTime": {
@@ -35145,7 +35145,18 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "w = [[0.]\n",
+      " [0.]\n",
+      " [0.]]\n",
+      "b = 0.0\n"
+     ]
+    }
+   ],
    "source": [
     "dim = 3 # No cambiar esta dimensión por favor\n",
     "w, b = initialize_with_zeros(dim)\n",
@@ -35190,7 +35201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "1fd9cdfe",
    "metadata": {
     "ExecuteTime": {
@@ -35235,28 +35246,31 @@
     "    \n",
     "    # Forward propagation\n",
     "    # Aproximadamente 2 líneas de código para:\n",
-    "    # A = \n",
-    "    # C = \n",
+    "    Z = np.dot(w.T, X) + b \n",
+    "    A = sigmoid(Z)  \n",
+    "    cost = -1/m * np.sum(Y * np.log(A) + (1 - Y) * np.log(1 - A))  # log-loss\n",
+    "    \n",
     "    # Recuerde que no debe usar ciclos y considere usar np.dot\n",
     "    # Backward propagation \n",
     "    # Aproximadamente 2 líneas de código para:\n",
-    "    # dw =\n",
-    "    # db = \n",
-    "    # Es decir, se esperan aprox 4 líneas de código\n",
-    "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
-    "    cost = np.squeeze(np.array(cost))\n",
+    "   # Backward propagation\n",
+    "    dZ = A - Y\n",
+    "    dw = 1/m * np.dot(X, dZ.T)\n",
+    "    db = 1/m * np.sum(dZ)\n",
     "\n",
-    "    \n",
-    "    grads = {\"dw\": dw,\n",
-    "             \"db\": db}\n",
+    "    cost = float(np.squeeze(cost))  # ahora sí la \"aplastamos\" si es necesario\n",
+    "\n",
+    "    grads = {\n",
+    "        \"dw\": dw,\n",
+    "        \"db\": db\n",
+    "    }\n",
     "    \n",
     "    return grads, cost"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "250593c3",
    "metadata": {
     "ExecuteTime": {
@@ -35277,7 +35291,66 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dw = [[ 0.00055672]\n",
+      " [-0.00048178]]\n",
+      "db = -0.0003283816747260056\n",
+      "cost = 0.000329022626806518\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <div class=\"alert alert-box alert-success\">\n",
+       "        <h1> <!--{id:\"CORRECTMARK\", marks:\"0\"}--> \n",
+       "         ✓ [0 marks] \n",
+       "         </h1> </div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <div class=\"alert alert-box alert-success\">\n",
+       "        <h1> <!--{id:\"CORRECTMARK\", marks:\"0\"}--> \n",
+       "         ✓ [0 marks] \n",
+       "         </h1> </div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <div class=\"alert alert-box alert-success\">\n",
+       "        <h1> <!--{id:\"CORRECTMARK\", marks:\"0\"}--> \n",
+       "         ✓ [0 marks] \n",
+       "         </h1> </div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "w =  np.array([[1.], [3]])\n",
     "b = 4.5\n",
@@ -35325,7 +35398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "id": "61a7fd87",
    "metadata": {
     "ExecuteTime": {
@@ -35378,9 +35451,8 @@
     "    \n",
     "    for i in range(num_iterations):\n",
     "        # Aprox 1 línea de codigo para:\n",
-    "        # grads, cost = \n",
+    "        grads, cost = propagate(w, b, X, Y)\n",
     "        # YOUR CODE HERE\n",
-    "        raise NotImplementedError()\n",
     "        \n",
     "        # Retrieve derivatives from grads\n",
     "        dw = grads[\"dw\"]\n",
@@ -35388,10 +35460,12 @@
     "        \n",
     "\n",
     "        # Aprox 2 lineas de codigo para:\n",
-    "        # w =\n",
-    "        # b = \n",
+    "        dw = grads[\"dw\"]\n",
+    "        db =  grads[\"db\"]\n",
     "        # YOUR CODE HERE\n",
-    "        raise NotImplementedError()\n",
+    "        w = w - learning_rate * dw\n",
+    "        b = b - learning_rate * db\n",
+    "\n",
     "        \n",
     "        # Record the costs\n",
     "        if i % 100 == 0:\n",
@@ -35412,7 +35486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "id": "67a5d1f9",
    "metadata": {
     "ExecuteTime": {
@@ -35433,7 +35507,21 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "w = [[0.99949949]\n",
+      " [3.00043321]]\n",
+      "b = 4.50029528361711\n",
+      "dw = [[ 0.00055554]\n",
+      " [-0.00048091]]\n",
+      "db = -0.0003278045123969942\n",
+      "Costs = [0.000329022626806518]\n"
+     ]
+    }
+   ],
    "source": [
     "# Recuerde NO cambiar esto por favor\n",
     "params, grads, costs = optimize(w, b, X, Y, num_iterations=100, learning_rate=0.009, print_cost=False)\n",
@@ -35478,7 +35566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "id": "28b82c5c",
    "metadata": {
     "ExecuteTime": {
@@ -35519,27 +35607,26 @@
     "    \n",
     "    # Calcule el vector A para predicir probabilidades de que sea un gato o un perro\n",
     "    # Aprox 1 linea de codigo para:\n",
-    "    # A =     \n",
+    "    A = sigmoid(np.dot(w.T, X) + b)\n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    # raise NotImplementedError()\n",
     "    \n",
     "    for i in range(A.shape[1]):\n",
     "        \n",
     "\n",
     "        # Aprox 4 lineas de codigo para convertir A[0,i] en una predicción:\n",
-    "        # if A[0, i] > ____ :\n",
-    "        #     Y_prediction[0,i] = \n",
-    "        # else:\n",
-    "        #     Y_prediction[0,i] =\n",
+    "        if A[0, i] > 0.5 :\n",
+    "            Y_prediction[0,i] = 1\n",
+    "        else:\n",
+    "            Y_prediction[0,i] = 0\n",
     "        # YOUR CODE HERE\n",
-    "        raise NotImplementedError()\n",
     "    \n",
     "    return Y_prediction"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "id": "79ca1b17",
    "metadata": {
     "ExecuteTime": {
@@ -35560,7 +35647,15 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "predictions = [[0. 1. 0.]]\n"
+     ]
+    }
+   ],
    "source": [
     "w = np.array([[0.112368795], [0.48636775]])\n",
     "b = -0.7\n",
@@ -35636,21 +35731,20 @@
     "    \"\"\"\n",
     "\n",
     "    # Aprox 1 linea de codigo para inicializar los parametros con cero:\n",
-    "    # w, b =\n",
+    "    w, b = initialize_with_zeros(X_train.shape[0])\n",
     "    \n",
     "    # Aprox una linea de codigo para gradient descent\n",
-    "    # params, grads, costs = \n",
+    "    params, grads, costs = optimize(w, b, X_train, Y_train, num_iterations, learning_rate, print_cost)\n",
     "    \n",
     "    # Aprox dos lineas de codigo para sacar los parametros del dictionary \"params\"\n",
-    "    # w =\n",
-    "    # b = \n",
+    "    w = params[\"w\"]\n",
+    "    b = params[\"b\"]\n",
     "    \n",
     "    # Aprox dos lineas de codigo para:\n",
-    "    # Y_prediction_test = \n",
-    "    # Y_prediction_train = \n",
+    "    Y_prediction_train = predict(w, b, X_train)\n",
+    "    Y_prediction_test = predict(w, b, X_test)\n",
     "    \n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
     "\n",
     "    # Print train/test Errors\n",
     "    if print_cost:\n",
