ej 2 lab 2 - steps operation

--- a/lab2.ipynb
+++ b/lab2.ipynb
@@ -683,6 +683,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "1c451504",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "6028795a",
    "metadata": {
     "ExecuteTime": {
@@ -717,18 +725,17 @@
     "    Z: Un escalar, resultado de convolving la ventana (W, b) \n",
     "    \"\"\"\n",
     "\n",
-    "    # Aprox 2-3 lineas de codigo\n",
-    "    # Multiplicación element-wise\n",
-    "    # Z = \n",
-    "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    s = np.multiply(a_slice_prev, W)\n",
+    "    \n",
+    "    # Suma todos los elementos y agrega el bias\n",
+    "    Z = np.sum(s) + float(b)\n",
     "\n",
     "    return Z"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "852d86c8",
    "metadata": {
     "ExecuteTime": {
@@ -749,7 +756,28 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\josue\\AppData\\Local\\Temp\\ipykernel_12732\\3592743870.py:18: DeprecationWarning: Conversion of an array with ndim > 0 to a scalar is deprecated, and will error in future. Ensure you extract a single element from your array before performing this operation. (Deprecated NumPy 1.25.)\n",
+      "  Z = np.sum(s) + float(b)\n"
+     ]
+    },
+    {
+     "ename": "NotImplementedError",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNotImplementedError\u001b[39m                       Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[12]\u001b[39m\u001b[32m, line 5\u001b[39m\n\u001b[32m      3\u001b[39m W = np.random.randn(\u001b[32m4\u001b[39m, \u001b[32m3\u001b[39m, \u001b[32m3\u001b[39m)\n\u001b[32m      4\u001b[39m b = np.random.randn(\u001b[32m1\u001b[39m, \u001b[32m1\u001b[39m, \u001b[32m1\u001b[39m)\n\u001b[32m----> \u001b[39m\u001b[32m5\u001b[39m Z = \u001b[43mconv_single_step\u001b[49m\u001b[43m(\u001b[49m\u001b[43ma_slice_prev\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mW\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mb\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m      6\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mZ =\u001b[39m\u001b[33m\"\u001b[39m, Z)\n\u001b[32m      8\u001b[39m \u001b[38;5;28;01mwith\u001b[39;00m tick.marks(\u001b[32m5\u001b[39m):        \n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[11]\u001b[39m\u001b[32m, line 19\u001b[39m, in \u001b[36mconv_single_step\u001b[39m\u001b[34m(a_slice_prev, W, b)\u001b[39m\n\u001b[32m     17\u001b[39m \u001b[38;5;66;03m# Suma todos los elementos y agrega el bias\u001b[39;00m\n\u001b[32m     18\u001b[39m Z = np.sum(s) + \u001b[38;5;28mfloat\u001b[39m(b)\n\u001b[32m---> \u001b[39m\u001b[32m19\u001b[39m \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mNotImplementedError\u001b[39;00m()\n\u001b[32m     21\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m Z\n",
+      "\u001b[31mNotImplementedError\u001b[39m: "
+     ]
+    }
+   ],
    "source": [
     "np.random.seed(seed_)\n",
     "a_slice_prev = np.random.randn(4, 3, 3)\n",
