--- a/lab2.ipynb
+++ b/lab2.ipynb
@@ -690,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "6028795a",
    "metadata": {
     "ExecuteTime": {
@@ -735,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "852d86c8",
    "metadata": {
     "ExecuteTime": {
@@ -758,24 +758,35 @@
    },
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Z = 17.154767154043057\n"
+     ]
+    },
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\josue\\AppData\\Local\\Temp\\ipykernel_12732\\3592743870.py:18: DeprecationWarning: Conversion of an array with ndim > 0 to a scalar is deprecated, and will error in future. Ensure you extract a single element from your array before performing this operation. (Deprecated NumPy 1.25.)\n",
+      "C:\\Users\\josue\\AppData\\Local\\Temp\\ipykernel_12732\\952239541.py:18: DeprecationWarning: Conversion of an array with ndim > 0 to a scalar is deprecated, and will error in future. Ensure you extract a single element from your array before performing this operation. (Deprecated NumPy 1.25.)\n",
       "  Z = np.sum(s) + float(b)\n"
      ]
     },
     {
-     "ename": "NotImplementedError",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mNotImplementedError\u001b[39m                       Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[12]\u001b[39m\u001b[32m, line 5\u001b[39m\n\u001b[32m      3\u001b[39m W = np.random.randn(\u001b[32m4\u001b[39m, \u001b[32m3\u001b[39m, \u001b[32m3\u001b[39m)\n\u001b[32m      4\u001b[39m b = np.random.randn(\u001b[32m1\u001b[39m, \u001b[32m1\u001b[39m, \u001b[32m1\u001b[39m)\n\u001b[32m----> \u001b[39m\u001b[32m5\u001b[39m Z = \u001b[43mconv_single_step\u001b[49m\u001b[43m(\u001b[49m\u001b[43ma_slice_prev\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mW\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mb\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m      6\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mZ =\u001b[39m\u001b[33m\"\u001b[39m, Z)\n\u001b[32m      8\u001b[39m \u001b[38;5;28;01mwith\u001b[39;00m tick.marks(\u001b[32m5\u001b[39m):        \n",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[11]\u001b[39m\u001b[32m, line 19\u001b[39m, in \u001b[36mconv_single_step\u001b[39m\u001b[34m(a_slice_prev, W, b)\u001b[39m\n\u001b[32m     17\u001b[39m \u001b[38;5;66;03m# Suma todos los elementos y agrega el bias\u001b[39;00m\n\u001b[32m     18\u001b[39m Z = np.sum(s) + \u001b[38;5;28mfloat\u001b[39m(b)\n\u001b[32m---> \u001b[39m\u001b[32m19\u001b[39m \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mNotImplementedError\u001b[39;00m()\n\u001b[32m     21\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m Z\n",
-      "\u001b[31mNotImplementedError\u001b[39m: "
-     ]
+     "data": {
+      "text/html": [
+       "\n",
+       "        <div class=\"alert alert-box alert-success\">\n",
+       "        <h1> <!--{id:\"CORRECTMARK\", marks:\"5\"}--> \n",
+       "         ✓ [5 marks] \n",
+       "         </h1> </div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -867,7 +878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "168f38c0",
    "metadata": {
     "ExecuteTime": {
@@ -891,90 +902,73 @@
     "def conv_forward(A_prev, W, b, hparameters):\n",
     "    \"\"\"\n",
     "    Implementa la parte de forward propagation para una función de convolución\n",
-    "    \n",
+    "\n",
     "    Arguments:\n",
-    "    A_prev: Salida de activación de la capa previa layer, \n",
-    "            Shape (m, n_H_prev, n_W_prev, n_C_prev)\n",
-    "    W: Pesos, shape (f, f, n_C_prev, n_C)\n",
-    "    b: Biases, shape (1, 1, 1, n_C)\n",
-    "    hparameters: Dictionario  con \"stride\" y \"pad\"\n",
-    "        \n",
+    "    A_prev -- Salida de activación de la capa previa, shape (m, n_H_prev, n_W_prev, n_C_prev)\n",
+    "    W -- Pesos, shape (f, f, n_C_prev, n_C)\n",
+    "    b -- Biases, shape (1, 1, 1, n_C)\n",
+    "    hparameters -- Diccionario con \"stride\" y \"pad\"\n",
+    "\n",
     "    Returns:\n",
-    "    Z:  conv output, shape (m, n_H, n_W, n_C)\n",
-    "    cache: cache de valores necesarios para conv_backward()\n",
+    "    Z -- Salida de la convolución, shape (m, n_H, n_W, n_C)\n",
+    "    cache -- Cache para backward propagation\n",
     "    \"\"\"\n",
+    "\n",
+    "    # Obtener dimensiones de la entrada\n",
+    "    (m, n_H_prev, n_W_prev, n_C_prev) = A_prev.shape\n",
     "    \n",
-    "    # Aprox 1 linea para:\n",
-    "    # Obtener las dimensiones de A_prev\n",
-    "    # (m, n_H_prev, n_W_prev, n_C_prev) =\n",
-    "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    # Obtener dimensiones del filtro\n",
+    "    (f, f, n_C_prev, n_C) = W.shape\n",
     "    \n",
-    "    # Aprox 1 linea para:\n",
-    "    # Obtener las dimensiones de W\n",
-    "    # (f, f, n_C_prev, n_C) =\n",
-    "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    # Obtener hiperparámetros\n",
+    "    stride = hparameters[\"stride\"]\n",
+    "    pad = hparameters[\"pad\"]\n",
     "    \n",
-    "    # Aprox 2 lineas para:\n",
-    "    # Obtener datos de \"hparameters\"\n",
-    "    # stride = \n",
-    "    # pad = \n",
-    "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    # Calcular dimensiones de la salida\n",
+    "    n_H = int((n_H_prev - f + 2 * pad) / stride) + 1\n",
+    "    n_W = int((n_W_prev - f + 2 * pad) / stride) + 1\n",
     "    \n",
-    "    # Hint: use int() to apply the 'floor' operation. (≈2 lines)\n",
-    "    # Aprox 2 lineas para:\n",
-    "    # Calcular las dimensiones del Conv output, usando las formulas dadas arriba\n",
-    "    # n_H =\n",
-    "    # n_W\n",
-    "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    # Inicializar la salida Z con ceros\n",
+    "    Z = np.zeros((m, n_H, n_W, n_C))\n",
     "    \n",
-    "    # Aprox 1 linea para\n",
-    "    # Iniciarlizar el volumen de salida Z con ceros\n",
-    "    # Z = \n",
-    "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
-    "    \n",
-    "    # Creamos A_prev_pad al agregar padding a A_prev\n",
+    "    # Agregar padding a A_prev\n",
     "    A_prev_pad = zero_pad(A_prev, pad)\n",
     "    \n",
-    "    # En este bloque de codigo deberan:\n",
-    "    # 1. Iterar sobre el batch de entrenamiento (m)\n",
-    "    # 2. Obtener a_prev_pad, para seleccionar el ith ejemplo con padding de entrenamiento\n",
-    "    # 3. Iterar sobre el axis vertical de la salida (n_H)\n",
-    "    # 4 y 5. Encontrar el inicio y final vertical de la ventana actual (slice)\n",
-    "    #        Es decir:\n",
-    "    #        vert_start =\n",
-    "    #        vert_end =\n",
-    "    # 6. Iterar sobre el axis horizontal de la salida (n_W)\n",
-    "    # 7 y 8. Encontrar el inicio y final horizontal de la ventana actual (slice)\n",
-    "    #        Es decir:\n",
-    "    #        horiz_start =\n",
-    "    #        horiz_end =\n",
-    "    # 9. Iterar sobre los canales (= # filtros) de la salida (n_C)\n",
-    "    # 10. Usar las esquinas para definir el slice (3D) de a_prev_pad. \n",
-    "    #     a_slice_prev = \n",
-    "    # 11. Convolucione el slice (3D) con el filtro correcto W, y bias b, para regresar la salida\n",
-    "    #     weights =\n",
-    "    #     biases = \n",
-    "    #     Z[i, h, w, c] = \n",
-    "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    # Iterar sobre el batch de ejemplos\n",
+    "    for i in range(m):\n",
+    "        a_prev_pad = A_prev_pad[i]  # (n_H_prev+2*pad, n_W_prev+2*pad, n_C_prev)\n",
+    "\n",
+    "        for h in range(n_H):  # vertical\n",
+    "            vert_start = h * stride\n",
+    "            vert_end = vert_start + f\n",
+    "\n",
+    "            for w in range(n_W):  # horizontal\n",
+    "                horiz_start = w * stride\n",
+    "                horiz_end = horiz_start + f\n",
+    "\n",
+    "                for c in range(n_C):  # canal (filtro)\n",
+    "                    # Extraer la slice de la imagen\n",
+    "                    a_slice_prev = a_prev_pad[vert_start:vert_end, horiz_start:horiz_end, :]\n",
+    "\n",
+    "                    # Obtener pesos y bias del filtro correspondiente\n",
+    "                    weights = W[:, :, :, c]\n",
+    "                    bias = b[:, :, :, c]\n",
+    "\n",
+    "                    # Aplicar paso de convolución\n",
+    "                    Z[i, h, w, c] = conv_single_step(a_slice_prev, weights, bias)\n",
     "    \n",
-    "    # Asegurandose que la salida sea con la forma correcta\n",
-    "    assert(Z.shape == (m, n_H, n_W, n_C))\n",
+    "    # Verificación de forma\n",
+    "    assert Z.shape == (m, n_H, n_W, n_C)\n",
     "    \n",
-    "    # Guardando información en el \"cache\" para el backpropagation\n",
+    "    # Guardar en cache\n",
     "    cache = (A_prev, W, b, hparameters)\n",
     "    \n",
-    "    return Z, cache"
+    "    return Z, cache\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "88d0f145",
    "metadata": {
     "ExecuteTime": {
@@ -995,7 +989,77 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Z's mean =\n",
+      " 0.3337664511415829\n",
+      "Z[3,2,1] =\n",
+      " [ 4.1749337   9.00045401  1.79056239 -2.293963   -0.5189402  10.78547069\n",
+      "  1.42173371 13.11009042]\n",
+      "cache_conv[0][1][2][3] =\n",
+      " [ 1.88596049  0.30974852 -0.3170466   0.481606   -0.43747686]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\josue\\AppData\\Local\\Temp\\ipykernel_12732\\952239541.py:18: DeprecationWarning: Conversion of an array with ndim > 0 to a scalar is deprecated, and will error in future. Ensure you extract a single element from your array before performing this operation. (Deprecated NumPy 1.25.)\n",
+      "  Z = np.sum(s) + float(b)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <div class=\"alert alert-box alert-success\">\n",
+       "        <h1> <!--{id:\"CORRECTMARK\", marks:\"5\"}--> \n",
+       "         ✓ [5 marks] \n",
+       "         </h1> </div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <div class=\"alert alert-box alert-success\">\n",
+       "        <h1> <!--{id:\"CORRECTMARK\", marks:\"5\"}--> \n",
+       "         ✓ [5 marks] \n",
+       "         </h1> </div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <div class=\"alert alert-box alert-success\">\n",
+       "        <h1> <!--{id:\"CORRECTMARK\", marks:\"5\"}--> \n",
+       "         ✓ [5 marks] \n",
+       "         </h1> </div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "np.random.seed(seed_)\n",
     "A_prev = np.random.randn(10,7,7,5)\n",
