--- a/lab2.ipynb
+++ b/lab2.ipynb
@@ -1196,68 +1196,64 @@
    },
    "outputs": [],
    "source": [
-    "def pool_forward(A_prev, hparameters, mode = \"max\"):\n",
+    "def pool_forward(A_prev, hparameters, mode=\"max\"):\n",
     "    \"\"\"\n",
     "    Implementa el paso forward de una capa de pooling\n",
     "    \n",
     "    Arguments:\n",
-    "    A_prev: Input shape (m, n_H_prev, n_W_prev, n_C_prev)\n",
-    "    hparameters: Diccionario con \"f\" and \"stride\"\n",
-    "    mode: String para el modo de pooling a usar (\"max\" or \"average\")\n",
+    "    A_prev -- Input, shape (m, n_H_prev, n_W_prev, n_C_prev)\n",
+    "    hparameters -- Diccionario con \"f\" y \"stride\"\n",
+    "    mode -- String que especifica el modo de pooling: \"max\" o \"average\"\n",
     "    \n",
     "    Returns:\n",
-    "    A: Salida shape (m, n_H, n_W, n_C)\n",
-    "    cache: Cache usado en el backward, contiene input e hiperparametros \n",
+    "    A -- Salida del pooling, shape (m, n_H, n_W, n_C)\n",
+    "    cache -- Tuple con valores útiles para el backward\n",
     "    \"\"\"\n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "    # Obtenemos las dimensiones del input\n",
+    "\n",
+    "    # las dimensiones del input\n",
     "    (m, n_H_prev, n_W_prev, n_C_prev) = A_prev.shape\n",
-    "    \n",
-    "    # Obtenemos los hiperparametros\n",
+    "\n",
+    "    # hiperparámetros\n",
     "    f = hparameters[\"f\"]\n",
     "    stride = hparameters[\"stride\"]\n",
-    "    \n",
-    "    # Definimos las dimensiones de salida\n",
+    "\n",
+    "    # las dimensiones de salida\n",
     "    n_H = int(1 + (n_H_prev - f) / stride)\n",
     "    n_W = int(1 + (n_W_prev - f) / stride)\n",
     "    n_C = n_C_prev\n",
-    "    \n",
-    "    # Init la matriz de salida A\n",
+    "\n",
+    "    # Inicializamos la salida\n",
     "    A = np.zeros((m, n_H, n_W, n_C))\n",
+    "\n",
+    "    for i in range(m):  # sobre el batch\n",
+    "        for h in range(n_H):  # vertical\n",
+    "            vert_start = h * stride\n",
+    "            vert_end = vert_start + f\n",
+    "\n",
+    "            for w in range(n_W):  # horizontal\n",
+    "                horiz_start = w * stride\n",
+    "                horiz_end = horiz_start + f\n",
+    "\n",
+    "                for c in range(n_C):  # sobre canales\n",
+    "                    a_prev_slice = A_prev[i, vert_start:vert_end, horiz_start:horiz_end, c]\n",
+    "\n",
+    "                    if mode == \"max\":\n",
+    "                        A[i, h, w, c] = np.max(a_prev_slice)\n",
+    "                    elif mode == \"average\":\n",
+    "                        A[i, h, w, c] = np.mean(a_prev_slice)\n",
     "    \n",
-    "    # En este bloque de codigo debera;\n",
-    "    # 1. Iterar sobre los ejemplos de entrada (m)\n",
-    "    # 2. Iterar sobre los el eje vertical de la salida (n_H)\n",
-    "    # 3. Encontrar el inicio y fin vertical de la ventana actual\n",
-    "    #    vert_start = \n",
-    "    #    vert_end = \n",
-    "    # 4. Iterar sobre el eje horizontal de la salida (n_W)\n",
-    "    # 5. Encontrar el inicio y fin horizontal de la ventana actual\n",
-    "    #    horiz_start = \n",
-    "    #    horiz_end =\n",
-    "    # 6. Iterar sobre los canales de salida (n_C)\n",
-    "    # 7. Encontrar las orillas para definir el slice(ventana) actual en el ith ejemplo de training de A_prev, canal c\n",
-    "    #    a_prev_slice =\n",
-    "    # 8. Calcular el pooling dependiendo del modo (mode) - Use np.max y np.mean\n",
-    "    #    A[i, h, w, c] =\n",
-    "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
-    "    \n",
-    "    # Guardar el input e hiperparametos en el \"cache\" para el pool_backward()\n",
+    "    # Cache para backward\n",
     "    cache = (A_prev, hparameters)\n",
-    "    \n",
-    "    # Asegurarse que la salida tiene la forma correcta\n",
+    "\n",
+    "    # Verificación de forma\n",
     "    assert(A.shape == (m, n_H, n_W, n_C))\n",
-    "    \n",
-    "    return A, cache"
+    "\n",
+    "    return A, cache\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "f1a2e02f",
    "metadata": {
     "ExecuteTime": {
@@ -1278,7 +1274,107 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <div class=\"alert alert-box alert-success\">\n",
+       "        <h1> <!--{id:\"CORRECTMARK\", marks:\"5\"}--> \n",
+       "         ✓ [5 marks] \n",
+       "         </h1> </div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mode = max\n",
+      "A.shape = (2, 3, 3, 3)\n",
+      "A =\n",
+      " [[[[2.65440726 2.09732919 0.89256196]\n",
+      "   [2.65440726 2.09732919 0.89256196]\n",
+      "   [2.65440726 1.44060519 0.77174916]]\n",
+      "\n",
+      "  [[1.5964877  2.39887598 0.89256196]\n",
+      "   [1.5964877  2.39887598 0.89256196]\n",
+      "   [1.5964877  2.39887598 0.77174916]]\n",
+      "\n",
+      "  [[1.5964877  2.39887598 1.23583026]\n",
+      "   [1.5964877  2.39887598 1.36481958]\n",
+      "   [1.5964877  2.39887598 1.36481958]]]\n",
+      "\n",
+      "\n",
+      " [[[1.84392163 2.43182155 1.29498747]\n",
+      "   [1.84392163 1.84444871 1.29498747]\n",
+      "   [0.6411132  1.84444871 1.16961103]]\n",
+      "\n",
+      "  [[1.05650003 1.83680466 1.29498747]\n",
+      "   [1.05650003 0.9194503  1.29498747]\n",
+      "   [1.60523445 0.9194503  1.16961103]]\n",
+      "\n",
+      "  [[1.06265456 1.83680466 0.68596995]\n",
+      "   [1.84881089 0.9194503  0.91014646]\n",
+      "   [1.84881089 1.42664748 1.06769765]]]]\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <div class=\"alert alert-box alert-success\">\n",
+       "        <h1> <!--{id:\"CORRECTMARK\", marks:\"5\"}--> \n",
+       "         ✓ [5 marks] \n",
+       "         </h1> </div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mode = average\n",
+      "A.shape = (2, 3, 3, 3)\n",
+      "A =\n",
+      " [[[[-0.03144582  0.21101766 -0.4691968 ]\n",
+      "   [-0.19309428  0.11749016 -0.32066469]\n",
+      "   [ 0.03682201  0.07413032 -0.36460992]]\n",
+      "\n",
+      "  [[-0.58916194  0.45332745 -0.92209295]\n",
+      "   [ 0.01933338  0.23001555 -0.80282417]\n",
+      "   [ 0.33096648 -0.05773358 -0.55515521]]\n",
+      "\n",
+      "  [[-0.19306801  0.61727733 -0.75579122]\n",
+      "   [ 0.34757347  0.47452468 -0.55854075]\n",
+      "   [ 0.52805193 -0.10908417 -0.5041339 ]]]\n",
+      "\n",
+      "\n",
+      " [[[ 0.41867593  0.27110615  0.24018433]\n",
+      "   [-0.08325311  0.13111052  0.36317349]\n",
+      "   [-0.35974293 -0.13195187  0.30872263]]\n",
+      "\n",
+      "  [[ 0.13066225  0.09595298 -0.31301579]\n",
+      "   [-0.36030628 -0.08070726  0.1281678 ]\n",
+      "   [-0.190839   -0.07153563  0.25708761]]\n",
+      "\n",
+      "  [[ 0.11435948  0.17765852 -0.54259002]\n",
+      "   [ 0.17261558 -0.07438603 -0.32846615]\n",
+      "   [ 0.14368759  0.21413355  0.1648492 ]]]]\n"
+     ]
+    }
+   ],
    "source": [
     "np.random.seed(seed_)\n",
     "A_prev = np.random.randn(2, 5, 5, 3)\n",
