--- a/lab2.ipynb
+++ b/lab2.ipynb
@@ -1253,7 +1253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "f1a2e02f",
    "metadata": {
     "ExecuteTime": {
@@ -1507,99 +1507,68 @@
    "source": [
     "def conv_backward(dZ, cache):\n",
     "    \"\"\"\n",
-    "    Implementa el backprogation para una función de convolución\n",
+    "    Implementa el backpropagation para una función de convolución\n",
     "    \n",
     "    Arguments:\n",
-    "    dZ: Gradiente de costo shape (m, n_H, n_W, n_C)\n",
-    "    cache: Cache de valores output de conv_forward()\n",
+    "    dZ -- Gradiente del costo con respecto a la salida de la conv layer, shape (m, n_H, n_W, n_C)\n",
+    "    cache -- Cache de valores (A_prev, W, b, hparameters) de conv_forward()\n",
     "    \n",
     "    Returns:\n",
-    "    dA_prev: Gradiente de costos con respecto de la entrada de la capa conv (A_prev), shape (m, n_H_prev, n_W_prev, n_C_prev)\n",
-    "    dW: Gradiente de costo con respecto de los de los pesos (W), shape (f, f, n_C_prev, n_C)\n",
-    "    db: Gradiente de costo con respecto de los biases de la capa conv (b), shape (1, 1, 1, n_C)\n",
+    "    dA_prev -- Gradiente con respecto a la entrada de la conv layer, shape (m, n_H_prev, n_W_prev, n_C_prev)\n",
+    "    dW -- Gradiente con respecto a los pesos W, shape (f, f, n_C_prev, n_C)\n",
+    "    db -- Gradiente con respecto a los biases b, shape (1, 1, 1, n_C)\n",
     "    \"\"\"\n",
     "    \n",
-    "    # Obtener info del \"cache\"\n",
+    "    # Recuperar info del cache\n",
     "    (A_prev, W, b, hparameters) = cache\n",
     "    \n",
-    "    # Obtener dimensiones de A_prev\n",
+    "    # Dimensiones de entrada\n",
     "    (m, n_H_prev, n_W_prev, n_C_prev) = A_prev.shape\n",
-    "    \n",
-    "    # Obtener dimensiones de W\n",
     "    (f, f, n_C_prev, n_C) = W.shape\n",
-    "    \n",
-    "    # Obtener información de los hiperparametros (hparameters)\n",
     "    stride = hparameters[\"stride\"]\n",
     "    pad = hparameters[\"pad\"]\n",
-    "    \n",
-    "    # Obtener dimensiones de dZ\n",
     "    (m, n_H, n_W, n_C) = dZ.shape\n",
     "    \n",
-    "    # Init variables\n",
+    "    # Inicializar gradientes\n",
     "    dA_prev = np.zeros((m, n_H_prev, n_W_prev, n_C_prev))                              \n",
     "    dW = np.zeros((f, f, n_C_prev, n_C))\n",
     "    db = np.zeros((1, 1, 1, n_C))\n",
     "    \n",
-    "    \n",
-    "    \n",
-    "\n",
-    "    # Agregar padding a  A_prev y dA_prev\n",
+    "    # Padding para A_prev y dA_prev\n",
     "    A_prev_pad = zero_pad(A_prev, pad)\n",
     "    dA_prev_pad = zero_pad(dA_prev, pad)\n",
     "    \n",
-    "    # Iteramos sobre los datos de entrenamiento\n",
-    "    for i in range(m): \n",
+    "    for i in range(m):\n",
+    "        a_prev_pad = A_prev_pad[i]\n",
+    "        da_prev_pad = dA_prev_pad[i]\n",
     "        \n",
-    "        # Aprox 2 lineas para\n",
-    "        # seleccionar el i-th ejemplo de entrenamiento de A_prev y dA_prev_pad\n",
-    "        # a_prev_pad =\n",
-    "        # da_prev_pad = \n",
-    "        # YOUR CODE HERE\n",
-    "        raise NotImplementedError()\n",
-    "        \n",
-    "        # Repetimos los loops de los pasos forward\n",
-    "        # Iteramos sobre el eje vertical (n_H)\n",
-    "        for h in range(n_H):                   \n",
-    "            # Iteramos sobre el eje horizontal (n_W)\n",
+    "        for h in range(n_H):\n",
     "            for w in range(n_W):\n",
-    "                # Iteramos sobre los canales (n_C)\n",
     "                for c in range(n_C):\n",
     "                    \n",
-    "                    # Aprox 4 linea para\n",
-    "                    # Encontrar las orillas de la ventana actual (slice) similar a como se hizo antes\n",
-    "                    # vert_start =\n",
-    "                    # vert_end =\n",
-    "                    # horiz_start = \n",
-    "                    # horiz_end =\n",
-    "                    # YOUR CODE HERE\n",
-    "                    raise NotImplementedError()\n",
+    "                    # Coordenadas de la ventana\n",
+    "                    vert_start = h * stride\n",
+    "                    vert_end = vert_start + f\n",
+    "                    horiz_start = w * stride\n",
+    "                    horiz_end = horiz_start + f\n",
     "                    \n",
-    "                    # Aprox 1 linea de codigo para\n",
-    "                    # Usar las orillas para definir el slice (ventana) de a_prev_pad\n",
-    "                    # a_slice = \n",
-    "                    # YOUR CODE HERE\n",
-    "                    raise NotImplementedError()\n",
-    "\n",
-    "                    # Update gradients for the window and the filter's parameters using the code formulas given above\n",
-    "                    # Aprox 3 lineas para\n",
-    "                    # Actualizar gradientes para la ventana y los params del filtro usando las formulas de arriba\n",
-    "                    # da_prev_pad[vert_start:vert_end, horiz_start:horiz_end, :] +=\n",
-    "                    # dW[:,:,:,c] +=\n",
-    "                    # db[:,:,:,c] += \n",
-    "                    # YOUR CODE HERE\n",
-    "                    raise NotImplementedError()\n",
-    "\n",
-    "        # Aprox 1 linea para\n",
-    "        # Settear el dA_prev del i-th ejemplo de entrenamiento a un da_prev_pad sin padding\n",
-    "        # Considere usar X[pad:-pad, pad:-pad, :]\n",
-    "        # dA_prev[i, :, :, :] =\n",
-    "        # YOUR CODE HERE\n",
-    "        raise NotImplementedError()\n",
+    "                    # Slice de entrada\n",
+    "                    a_slice = a_prev_pad[vert_start:vert_end, horiz_start:horiz_end, :]\n",
+    "                    \n",
+    "                    # Actualizar gradientes\n",
+    "                    da_prev_pad[vert_start:vert_end, horiz_start:horiz_end, :] += W[:, :, :, c] * dZ[i, h, w, c]\n",
+    "                    dW[:, :, :, c] += a_slice * dZ[i, h, w, c]\n",
+    "                    db[:, :, :, c] += dZ[i, h, w, c]\n",
+    "        \n",
+    "        # Remover padding\n",
+    "        if pad != 0:\n",
+    "            dA_prev[i, :, :, :] = da_prev_pad[pad:-pad, pad:-pad, :]\n",
+    "        else:\n",
+    "            dA_prev[i, :, :, :] = da_prev_pad\n",
     "    \n",
-    "    # Asegurandose que la forma es la correcta\n",
-    "    assert(dA_prev.shape == (m, n_H_prev, n_W_prev, n_C_prev))\n",
+    "    assert dA_prev.shape == (m, n_H_prev, n_W_prev, n_C_prev)\n",
     "    \n",
-    "    return dA_prev, dW, db"
+    "    return dA_prev, dW, db\n"
    ]
   },
   {
